cpu tab
